[tool.poetry]
name = "tcp-over-udp"
version = "0.1.0"
description = ""
authors = ["Paul Logston <paul.logston@gmail.com>"]
readme = "README.md"

packages = [
    { include = "nic", from = "src" },
    { include = "packets", from = "src" },
    { include = "utils", from = "src" },
]

[tool.poetry.scripts]
server = 'nic.server:main'
client = 'nic.client:main'

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
